--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "soup"
+name = "color_map"
 version = "0.1.0"
 authors = ["skeletaljazzwizard <alexanderbrhoda@gmail.com>"]
 edition = "2018"
